Make program committee page visible

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
               <li class="navigation__item"><a href="{{ site.baseurl }}/schedule" title="schedule" class="blog-button"><b>Schedule</b></a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/speakers" title="speakers" class="blog-button">Speakers</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/organizers" title="organizers" class="blog-button">Organizers</a></li>
-              <!-- li class="navigation__item"><a href="{{ site.baseurl }}/pcom" title="pcom" class="blog-button">Program Committee</a></li><--!>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/pcom" title="pcom" class="blog-button">Program Committee</a></li>
             </ul>
           </nav>
 
