Make accepted papers page visible

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,7 @@
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}/overview" title="overview" class="blog-button">Overview</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/cfp" title="cfp" class="blog-button">Call for Papers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/papers" title="accepted papers" class="blog-button">Accepted Papers</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/schedule" title="schedule" class="blog-button"><b>Schedule</b></a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/speakers" title="speakers" class="blog-button">Speakers</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/organizers" title="organizers" class="blog-button">Organizers</a></li>
